--- a/assets/pandas_eda.ipynb
+++ b/assets/pandas_eda.ipynb
@@ -226,9 +226,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "d2l:Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-d2l-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,9 +240,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.10"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
