--- a/assets/pandas_eda.ipynb
+++ b/assets/pandas_eda.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2011_us_ag_exports.csv')\n"
+    "df = pd.read_csv('shootings.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -37,154 +37,142 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>code</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>manner_of_death</th>\n",
+       "      <th>armed</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race</th>\n",
+       "      <th>city</th>\n",
        "      <th>state</th>\n",
-       "      <th>category</th>\n",
-       "      <th>total exports</th>\n",
-       "      <th>beef</th>\n",
-       "      <th>pork</th>\n",
-       "      <th>poultry</th>\n",
-       "      <th>dairy</th>\n",
-       "      <th>fruits fresh</th>\n",
-       "      <th>fruits proc</th>\n",
-       "      <th>total fruits</th>\n",
-       "      <th>veggies fresh</th>\n",
-       "      <th>veggies proc</th>\n",
-       "      <th>total veggies</th>\n",
-       "      <th>corn</th>\n",
-       "      <th>wheat</th>\n",
-       "      <th>cotton</th>\n",
+       "      <th>signs_of_mental_illness</th>\n",
+       "      <th>threat_level</th>\n",
+       "      <th>flee</th>\n",
+       "      <th>body_camera</th>\n",
+       "      <th>arms_category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>state</td>\n",
-       "      <td>1390.63</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>10.6</td>\n",
-       "      <td>481.0</td>\n",
-       "      <td>4.06</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>25.11</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>8.9</td>\n",
-       "      <td>14.33</td>\n",
-       "      <td>34.9</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>317.61</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Tim Elliot</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>shot</td>\n",
+       "      <td>gun</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>Shelton</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Guns</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>state</td>\n",
-       "      <td>13.31</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Lewis Lee Lembke</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>shot</td>\n",
+       "      <td>gun</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Aloha</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>False</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Guns</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>state</td>\n",
-       "      <td>1463.17</td>\n",
-       "      <td>71.3</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>105.48</td>\n",
-       "      <td>19.3</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>60.27</td>\n",
-       "      <td>147.5</td>\n",
-       "      <td>239.4</td>\n",
-       "      <td>386.91</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>48.7</td>\n",
-       "      <td>423.95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>John Paul Quintero</td>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>shot and Tasered</td>\n",
+       "      <td>unarmed</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Wichita</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>False</td>\n",
+       "      <td>other</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Unarmed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AR</td>\n",
-       "      <td>Arkansas</td>\n",
-       "      <td>state</td>\n",
-       "      <td>3586.02</td>\n",
-       "      <td>53.2</td>\n",
-       "      <td>29.4</td>\n",
-       "      <td>562.9</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>6.88</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>11.45</td>\n",
-       "      <td>69.5</td>\n",
-       "      <td>114.5</td>\n",
-       "      <td>665.44</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Matthew Hoffman</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>shot</td>\n",
+       "      <td>toy weapon</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Other unusual objects</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>California</td>\n",
-       "      <td>state</td>\n",
-       "      <td>16472.88</td>\n",
-       "      <td>228.7</td>\n",
-       "      <td>11.1</td>\n",
-       "      <td>225.4</td>\n",
-       "      <td>929.95</td>\n",
-       "      <td>2791.8</td>\n",
-       "      <td>5944.6</td>\n",
-       "      <td>8736.40</td>\n",
-       "      <td>803.2</td>\n",
-       "      <td>1303.5</td>\n",
-       "      <td>2106.79</td>\n",
-       "      <td>34.6</td>\n",
-       "      <td>249.3</td>\n",
-       "      <td>1064.95</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Michael Rodriguez</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>shot</td>\n",
+       "      <td>nail gun</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>False</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Piercing objects</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  code       state category  total exports   beef  pork  poultry   dairy  \\\n",
-       "0   AL     Alabama    state        1390.63   34.4  10.6    481.0    4.06   \n",
-       "1   AK      Alaska    state          13.31    0.2   0.1      0.0    0.19   \n",
-       "2   AZ     Arizona    state        1463.17   71.3  17.9      0.0  105.48   \n",
-       "3   AR    Arkansas    state        3586.02   53.2  29.4    562.9    3.53   \n",
-       "4   CA  California    state       16472.88  228.7  11.1    225.4  929.95   \n",
+       "   id                name        date   manner_of_death       armed   age  \\\n",
+       "0   3          Tim Elliot  2015-01-02              shot         gun  53.0   \n",
+       "1   4    Lewis Lee Lembke  2015-01-02              shot         gun  47.0   \n",
+       "2   5  John Paul Quintero  2015-01-03  shot and Tasered     unarmed  23.0   \n",
+       "3   8     Matthew Hoffman  2015-01-04              shot  toy weapon  32.0   \n",
+       "4   9   Michael Rodriguez  2015-01-04              shot    nail gun  39.0   \n",
        "\n",
-       "   fruits fresh  fruits proc  total fruits  veggies fresh  veggies proc  \\\n",
-       "0           8.0         17.1         25.11            5.5           8.9   \n",
-       "1           0.0          0.0          0.00            0.6           1.0   \n",
-       "2          19.3         41.0         60.27          147.5         239.4   \n",
-       "3           2.2          4.7          6.88            4.4           7.1   \n",
-       "4        2791.8       5944.6       8736.40          803.2        1303.5   \n",
+       "  gender      race           city state  signs_of_mental_illness threat_level  \\\n",
+       "0      M     Asian        Shelton    WA                     True       attack   \n",
+       "1      M     White          Aloha    OR                    False       attack   \n",
+       "2      M  Hispanic        Wichita    KS                    False        other   \n",
+       "3      M     White  San Francisco    CA                     True       attack   \n",
+       "4      M  Hispanic          Evans    CO                    False       attack   \n",
        "\n",
-       "   total veggies  corn  wheat   cotton  \n",
-       "0          14.33  34.9   70.0   317.61  \n",
-       "1           1.56   0.0    0.0     0.00  \n",
-       "2         386.91   7.3   48.7   423.95  \n",
-       "3          11.45  69.5  114.5   665.44  \n",
-       "4        2106.79  34.6  249.3  1064.95  "
+       "          flee  body_camera          arms_category  \n",
+       "0  Not fleeing        False                   Guns  \n",
+       "1  Not fleeing        False                   Guns  \n",
+       "2  Not fleeing        False                Unarmed  \n",
+       "3  Not fleeing        False  Other unusual objects  \n",
+       "4  Not fleeing        False       Piercing objects  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,19 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['code', 'state', 'category', 'total exports', 'beef', 'pork', 'poultry',\n",
-       "       'dairy', 'fruits fresh', 'fruits proc', 'total fruits', 'veggies fresh',\n",
-       "       'veggies proc', 'total veggies', 'corn', 'wheat', 'cotton'],\n",
+       "Index(['id', 'name', 'date', 'manner_of_death', 'armed', 'age', 'gender',\n",
+       "       'race', 'city', 'state', 'signs_of_mental_illness', 'threat_level',\n",
+       "       'flee', 'body_camera', 'arms_category'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
