change to app.py

--- a/assets/pandas_eda.ipynb
+++ b/assets/pandas_eda.ipynb
@@ -323,6 +323,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2015-01-02', '2015-01-03', '2015-01-04', ..., '2020-06-12',\n",
+       "       '2020-06-13', '2020-06-15'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['date'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
