--- a/assets/pandas_eda.ipynb
+++ b/assets/pandas_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4  Not fleeing        False       Piercing objects  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,20 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'code', 'state', 'category', 'total exports', 'beef',\n",
-       "       'pork', 'poultry', 'dairy', 'fruits fresh', 'fruits proc',\n",
-       "       'total fruits', 'veggies fresh', 'veggies proc', 'total veggies',\n",
-       "       'corn', 'wheat', 'cotton'],\n",
+       "Index(['id', 'name', 'date', 'manner_of_death', 'armed', 'age', 'gender',\n",
+       "       'race', 'city', 'state', 'signs_of_mental_illness', 'threat_level',\n",
+       "       'flee', 'body_camera', 'arms_category'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -240,205 +239,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>total exports</th>\n",
-       "      <th>beef</th>\n",
-       "      <th>pork</th>\n",
-       "      <th>poultry</th>\n",
-       "      <th>dairy</th>\n",
-       "      <th>fruits fresh</th>\n",
-       "      <th>fruits proc</th>\n",
-       "      <th>total fruits</th>\n",
-       "      <th>veggies fresh</th>\n",
-       "      <th>veggies proc</th>\n",
-       "      <th>total veggies</th>\n",
-       "      <th>corn</th>\n",
-       "      <th>wheat</th>\n",
-       "      <th>cotton</th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>50.00000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.00000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.00000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.00000</td>\n",
+       "      <td>4895.000000</td>\n",
+       "      <td>4895.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>24.50000</td>\n",
-       "      <td>2728.889000</td>\n",
-       "      <td>108.394000</td>\n",
-       "      <td>122.282000</td>\n",
-       "      <td>112.700000</td>\n",
-       "      <td>95.725200</td>\n",
-       "      <td>90.05000</td>\n",
-       "      <td>191.736000</td>\n",
-       "      <td>281.79000</td>\n",
-       "      <td>44.428000</td>\n",
-       "      <td>72.102000</td>\n",
-       "      <td>116.523800</td>\n",
-       "      <td>273.042000</td>\n",
-       "      <td>222.824000</td>\n",
-       "      <td>169.32500</td>\n",
+       "      <td>2902.148519</td>\n",
+       "      <td>36.549750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>14.57738</td>\n",
-       "      <td>3144.837608</td>\n",
-       "      <td>193.762904</td>\n",
-       "      <td>303.492907</td>\n",
-       "      <td>162.878644</td>\n",
-       "      <td>168.016886</td>\n",
-       "      <td>402.16488</td>\n",
-       "      <td>856.334256</td>\n",
-       "      <td>1258.49891</td>\n",
-       "      <td>116.513625</td>\n",
-       "      <td>189.088833</td>\n",
-       "      <td>305.615222</td>\n",
-       "      <td>556.824919</td>\n",
-       "      <td>362.291291</td>\n",
-       "      <td>402.92782</td>\n",
+       "      <td>1683.467910</td>\n",
+       "      <td>12.694348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>13.310000</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.190000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>6.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>12.25000</td>\n",
-       "      <td>465.142500</td>\n",
-       "      <td>13.400000</td>\n",
-       "      <td>0.525000</td>\n",
-       "      <td>2.950000</td>\n",
-       "      <td>6.980000</td>\n",
-       "      <td>2.12500</td>\n",
-       "      <td>4.550000</td>\n",
-       "      <td>6.67000</td>\n",
-       "      <td>4.325000</td>\n",
-       "      <td>6.950000</td>\n",
-       "      <td>11.232500</td>\n",
-       "      <td>5.875000</td>\n",
-       "      <td>8.500000</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>1441.500000</td>\n",
+       "      <td>27.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>24.50000</td>\n",
-       "      <td>1822.950000</td>\n",
-       "      <td>41.050000</td>\n",
-       "      <td>16.800000</td>\n",
-       "      <td>33.550000</td>\n",
-       "      <td>32.165000</td>\n",
-       "      <td>4.80000</td>\n",
-       "      <td>10.300000</td>\n",
-       "      <td>15.11000</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>20.350000</td>\n",
-       "      <td>32.910000</td>\n",
-       "      <td>37.200000</td>\n",
-       "      <td>78.100000</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>2847.000000</td>\n",
+       "      <td>35.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>36.75000</td>\n",
-       "      <td>3768.665000</td>\n",
-       "      <td>106.725000</td>\n",
-       "      <td>84.975000</td>\n",
-       "      <td>162.425000</td>\n",
-       "      <td>101.535000</td>\n",
-       "      <td>25.30000</td>\n",
-       "      <td>53.925000</td>\n",
-       "      <td>79.24000</td>\n",
-       "      <td>45.700000</td>\n",
-       "      <td>74.175000</td>\n",
-       "      <td>119.845000</td>\n",
-       "      <td>182.175000</td>\n",
-       "      <td>248.725000</td>\n",
-       "      <td>102.46500</td>\n",
+       "      <td>4352.500000</td>\n",
+       "      <td>45.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>49.00000</td>\n",
-       "      <td>16472.880000</td>\n",
-       "      <td>961.000000</td>\n",
-       "      <td>1895.600000</td>\n",
-       "      <td>630.400000</td>\n",
-       "      <td>929.950000</td>\n",
-       "      <td>2791.80000</td>\n",
-       "      <td>5944.600000</td>\n",
-       "      <td>8736.40000</td>\n",
-       "      <td>803.200000</td>\n",
-       "      <td>1303.500000</td>\n",
-       "      <td>2106.790000</td>\n",
-       "      <td>2529.800000</td>\n",
-       "      <td>1664.500000</td>\n",
-       "      <td>2308.76000</td>\n",
+       "      <td>5925.000000</td>\n",
+       "      <td>91.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0  total exports        beef         pork     poultry  \\\n",
-       "count    50.00000      50.000000   50.000000    50.000000   50.000000   \n",
-       "mean     24.50000    2728.889000  108.394000   122.282000  112.700000   \n",
-       "std      14.57738    3144.837608  193.762904   303.492907  162.878644   \n",
-       "min       0.00000      13.310000    0.100000     0.000000    0.000000   \n",
-       "25%      12.25000     465.142500   13.400000     0.525000    2.950000   \n",
-       "50%      24.50000    1822.950000   41.050000    16.800000   33.550000   \n",
-       "75%      36.75000    3768.665000  106.725000    84.975000  162.425000   \n",
-       "max      49.00000   16472.880000  961.000000  1895.600000  630.400000   \n",
-       "\n",
-       "            dairy  fruits fresh  fruits proc  total fruits  veggies fresh  \\\n",
-       "count   50.000000      50.00000    50.000000      50.00000      50.000000   \n",
-       "mean    95.725200      90.05000   191.736000     281.79000      44.428000   \n",
-       "std    168.016886     402.16488   856.334256    1258.49891     116.513625   \n",
-       "min      0.190000       0.00000     0.000000       0.00000       0.000000   \n",
-       "25%      6.980000       2.12500     4.550000       6.67000       4.325000   \n",
-       "50%     32.165000       4.80000    10.300000      15.11000      12.500000   \n",
-       "75%    101.535000      25.30000    53.925000      79.24000      45.700000   \n",
-       "max    929.950000    2791.80000  5944.600000    8736.40000     803.200000   \n",
-       "\n",
-       "       veggies proc  total veggies         corn        wheat      cotton  \n",
-       "count     50.000000      50.000000    50.000000    50.000000    50.00000  \n",
-       "mean      72.102000     116.523800   273.042000   222.824000   169.32500  \n",
-       "std      189.088833     305.615222   556.824919   362.291291   402.92782  \n",
-       "min        0.000000       0.000000     0.000000     0.000000     0.00000  \n",
-       "25%        6.950000      11.232500     5.875000     8.500000     0.00000  \n",
-       "50%       20.350000      32.910000    37.200000    78.100000     0.00000  \n",
-       "75%       74.175000     119.845000   182.175000   248.725000   102.46500  \n",
-       "max     1303.500000    2106.790000  2529.800000  1664.500000  2308.76000  "
+       "                id          age\n",
+       "count  4895.000000  4895.000000\n",
+       "mean   2902.148519    36.549750\n",
+       "std    1683.467910    12.694348\n",
+       "min       3.000000     6.000000\n",
+       "25%    1441.500000    27.000000\n",
+       "50%    2847.000000    35.000000\n",
+       "75%    4352.500000    45.000000\n",
+       "max    5925.000000    91.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
